@@ -96,7 +96,9 @@ m_fido
 m_abook
        This module uses the program abook
        (http://www.linuxstart.com/~jheinonen/abook/), a text based
-       address book application to search for addresses.
+       address book application to search for addresses.  You can
+       define multiple abook address books by setting the variable
+       ABOOK_FILES to a space separated list.
 
 m_addr_email
        This module uses addr-email from the addressbook
