@@ -2,8 +2,10 @@ lbdb (0.26.1) unstable; urgency=low
 
   * Rebuild configure with autoconf 2.53.
   * Add long options --version and --help to ldbdq and man page.
+  * Support multiple address book files with abook.  Thanks to Etienne
+    PIERRE <marluchon@netcourrier.com> for providing this patch.
 
- -- Roland Rosenfeld <roland@debian.org>  Tue, 30 Apr 2002 14:35:00 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Thu,  1 Aug 2002 20:57:40 +0200
 
 lbdb (0.26) unstable; urgency=low
 
